--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               Sign up
             </button>
           </div>
-          <img src="images\Rocket Boy_Flatline (2).svg" class="image" alt="" />
+          <img src="#" class="image" alt="" />
         </div>
         <div class="panel right-panel">
           <div class="content">
@@ -98,7 +98,7 @@
               Sign in
             </button>
           </div>
-          <img src="images\undraw_playful_cat_re_ac9g.svg" class="image" alt="" />
+          <img src="#" class="image" alt="" />
         </div>
       </div>
     </div>
